All files added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./index.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
     />
     <link
       rel="stylesheet"
@@ -21,6 +21,14 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Kumbh Sans:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open Sans:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap"
     />
     <link
       rel="stylesheet"
@@ -61,7 +69,8 @@
         </div>
       </header>
       <div class="calvin-bailey-name">
-        <div class="tag-parent">
+        <div class="rectangle-parent">
+          <div class="frame-child"></div>
           <div class="tag">
             <div class="rent-smart-live-easy-the-fut-parent">
               <h1 class="rent-smart-live-container">
@@ -166,7 +175,15 @@
                 <div class="question-item1">
                   <div class="frequently-asked-questions">
                     <div class="iconly-light-search1">
-                      <div class="question-text"></div>
+                      <div class="question-text">
+                        <img
+                          class="question-text-child"
+                          alt=""
+                          src="./public/rectangle-41493@2x.png"
+                        />
+
+                        <div class="question-text-item"></div>
+                      </div>
                     </div>
                   </div>
                   <div class="footer-container">
@@ -296,7 +313,7 @@
                 class="currency-symbol-icon"
                 loading="eager"
                 alt=""
-                src="./public/rectangle-41493@2x.png"
+                src="./public/rectangle-414931@2x.png"
               />
 
               <div class="description1">
@@ -310,9 +327,9 @@
 
                       <b class="b">₦400000</b>
                     </div>
-                    <div class="text-frame-parent">
+                    <div class="group-div">
                       <img
-                        class="text-frame-icon"
+                        class="rooms-icon"
                         alt=""
                         src="./public/text-frame.svg"
                       />
@@ -333,9 +350,9 @@
                   >
                 </div>
                 <div class="frame-div">
-                  <img class="frame-icon1" alt="" src="./public/frame-1.svg" />
+                  <img class="frame-icon2" alt="" src="./public/frame-1.svg" />
 
-                  <img class="frame-icon2" alt="" src="./public/frame-2.svg" />
+                  <img class="frame-icon3" alt="" src="./public/frame-2.svg" />
                 </div>
               </div>
             </div>
@@ -361,9 +378,9 @@
 
                       <b class="b">₦400000</b>
                     </div>
-                    <div class="text-frame-parent">
+                    <div class="group-div">
                       <img
-                        class="text-frame-icon"
+                        class="rooms-icon"
                         alt=""
                         src="./public/text-frame.svg"
                       />
@@ -384,9 +401,9 @@
                   >
                 </div>
                 <div class="frame-div">
-                  <img class="frame-icon1" alt="" src="./public/frame-1.svg" />
+                  <img class="frame-icon2" alt="" src="./public/frame-1.svg" />
 
-                  <img class="frame-icon2" alt="" src="./public/frame-2.svg" />
+                  <img class="frame-icon3" alt="" src="./public/frame-2.svg" />
                 </div>
               </div>
             </div>
@@ -410,9 +427,9 @@
 
                       <b class="b">₦400000</b>
                     </div>
-                    <div class="text-frame-parent">
+                    <div class="group-div">
                       <img
-                        class="text-frame-icon"
+                        class="rooms-icon"
                         alt=""
                         src="./public/text-frame.svg"
                       />
@@ -433,9 +450,9 @@
                   >
                 </div>
                 <div class="frame-div">
-                  <img class="frame-icon1" alt="" src="./public/frame-1.svg" />
+                  <img class="frame-icon2" alt="" src="./public/frame-1.svg" />
 
-                  <img class="frame-icon2" alt="" src="./public/frame-2.svg" />
+                  <img class="frame-icon3" alt="" src="./public/frame-2.svg" />
                 </div>
               </div>
             </div>
@@ -462,9 +479,9 @@
 
                     <b class="b">₦400000</b>
                   </div>
-                  <div class="text-frame-parent">
+                  <div class="group-div">
                     <img
-                      class="text-frame-icon"
+                      class="rooms-icon"
                       alt=""
                       src="./public/text-frame.svg"
                     />
@@ -486,14 +503,14 @@
               </div>
               <div class="frame-div">
                 <img
-                  class="frame-icon1"
+                  class="frame-icon2"
                   loading="eager"
                   alt=""
                   src="./public/frame-1.svg"
                 />
 
                 <img
-                  class="frame-icon2"
+                  class="frame-icon3"
                   loading="eager"
                   alt=""
                   src="./public/frame-2.svg"
@@ -521,9 +538,9 @@
 
                     <b class="b">₦400000</b>
                   </div>
-                  <div class="text-frame-parent">
+                  <div class="group-div">
                     <img
-                      class="text-frame-icon"
+                      class="rooms-icon"
                       alt=""
                       src="./public/text-frame.svg"
                     />
@@ -545,13 +562,13 @@
               </div>
               <div class="frame-div">
                 <img
-                  class="frame-icon1"
+                  class="frame-icon2"
                   loading="eager"
                   alt=""
                   src="./public/frame-1.svg"
                 />
 
-                <img class="frame-icon2" alt="" src="./public/frame-2.svg" />
+                <img class="frame-icon3" alt="" src="./public/frame-2.svg" />
               </div>
             </div>
           </div>
@@ -561,7 +578,7 @@
               class="currency-symbol-icon"
               loading="eager"
               alt=""
-              src="./public/rectangle-41493@2x.png"
+              src="./public/rectangle-414931@2x.png"
             />
 
             <div class="description1">
@@ -575,9 +592,9 @@
 
                     <b class="b">₦400000</b>
                   </div>
-                  <div class="text-frame-parent">
+                  <div class="group-div">
                     <img
-                      class="text-frame-icon"
+                      class="rooms-icon"
                       alt=""
                       src="./public/text-frame.svg"
                     />
@@ -598,9 +615,9 @@
                 >
               </div>
               <div class="frame-div">
-                <img class="frame-icon1" alt="" src="./public/frame-1.svg" />
+                <img class="frame-icon2" alt="" src="./public/frame-1.svg" />
 
-                <img class="frame-icon2" alt="" src="./public/frame-2.svg" />
+                <img class="frame-icon3" alt="" src="./public/frame-2.svg" />
               </div>
             </div>
           </div>
@@ -644,11 +661,7 @@
             <div class="faq-item-1">
               <div class="lorem-ipsum-dolor-sit-amet-con">
                 <div class="a-question-goes">A question goes here</div>
-                <img
-                  class="pricing-parent-child-children"
-                  alt=""
-                  src="./public/vector-9.svg"
-                />
+                <img class="vector-icon" alt="" src="./public/vector-9.svg" />
               </div>
               <div class="lorem-ipsum-dolor">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -708,16 +721,16 @@
         </section>
         <footer class="footer-5">
           <div class="mask-group-frame">
-            <div class="some-menu">
+            <div class="mask-group-1-1-parent">
               <img
-                class="mask-group-1-1"
+                class="mask-group-1-11"
                 loading="eager"
                 alt=""
                 src="./public/mask-group-1-1@2x.png"
               />
 
               <div class="divider1">
-                <div class="some-menu1">Home</div>
+                <div class="some-menu">Home</div>
                 <div class="menu">Navigate</div>
                 <div class="menu1">Location</div>
                 <div class="menu2">Support</div>
@@ -810,4 +823,3 @@
     </script>
   </body>
 </html>
-
