--- a/login-page.html
+++ b/login-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./login-page.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
     />
     <link
       rel="stylesheet"
@@ -24,14 +24,22 @@
     />
     <link
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open Sans:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap"
     />
   </head>
   <body>
     <div class="login-page">
-      <img class="image-200-icon1" alt="" src="./public/image-200@2x.png" />
+      <img class="image-200-icon3" alt="" src="./public/image-200@2x.png" />
 
-      <div class="button2"></div>
+      <div class="button7"></div>
       <div class="parent-frame">
         <div class="parent-frame-child"></div>
         <div class="first-child-frame">
@@ -40,10 +48,10 @@
             <span class="welcome1">o </span>
           </div>
           <img
-            class="mask-group-1-13"
+            class="mask-group-1-18"
             loading="eager"
             alt=""
-            src="./public/mask-group-1-11@2x.png"
+            src="./public/mask-group-1-111@2x.png"
           />
         </div>
         <form class="second-child-frame">
@@ -82,9 +90,9 @@
             </div>
           </div>
           <div class="button-frame">
-            <button class="button3" id="button1">
-              <div class="button4">
-                <div class="log-in1">Log In</div>
+            <button class="button8" id="button1">
+              <div class="button9">
+                <div class="log-in6">Log In</div>
               </div>
             </button>
             <div class="or-continue-with">Or Continue With</div>
@@ -125,7 +133,7 @@
       var button1 = document.getElementById("button1");
       if (button1) {
         button1.addEventListener("click", function (e) {
-          // Please sync "Dashboard Landlord" to the project
+          window.location.href = "./dashboard-landlord.html";
         });
       }
 
