--- a/payment-page-2.html
+++ b/payment-page-2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./payment-page-2.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
     />
     <link
       rel="stylesheet"
@@ -24,6 +24,14 @@
     />
     <link
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open Sans:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap"
     />
   </head>
@@ -33,7 +41,7 @@
         <div class="backbutton">
           <div class="detailsframe">
             <img
-              class="mask-group-1-14"
+              class="mask-group-1-19"
               alt=""
               src="./public/mask-group-1-1@2x.png"
             />
@@ -41,7 +49,7 @@
           <div class="bedroomframe">
             <div class="bathroomframe">
               <div class="monthlyrentframe">
-                <div class="rent2">Rent</div>
+                <div class="rent3">Rent</div>
                 <div class="buy1">Buy</div>
                 <div class="sell1">Sell</div>
               </div>
@@ -94,7 +102,7 @@
                           src="./public/beddouble.svg"
                         />
 
-                        <b class="b6">4</b>
+                        <b class="b12">4</b>
                       </div>
                     </div>
                   </div>
@@ -108,7 +116,7 @@
                           src="./public/bathtub01.svg"
                         />
 
-                        <b class="b7">2</b>
+                        <b class="b13">2</b>
                       </div>
                     </div>
                   </div>
@@ -122,7 +130,7 @@
                           src="./public/bathtub01.svg"
                         />
 
-                        <b class="b7">2</b>
+                        <b class="b13">2</b>
                       </div>
                     </div>
                   </div>
@@ -136,7 +144,7 @@
                           src="./public/wallet03.svg"
                         />
 
-                        <b class="b9">$2,000</b>
+                        <b class="b15">$2,000</b>
                       </div>
                     </div>
                   </div>
@@ -209,13 +217,13 @@
                               />
 
                               <div class="number">
-                                <div class="div">1234</div>
-                                <div class="div1">-</div>
-                                <div class="div">1234</div>
-                                <div class="div1">-</div>
-                                <div class="div">1234</div>
-                                <div class="div1">-</div>
-                                <div class="div">1234</div>
+                                <div class="div8">1234</div>
+                                <div class="div9">-</div>
+                                <div class="div8">1234</div>
+                                <div class="div9">-</div>
+                                <div class="div8">1234</div>
+                                <div class="div9">-</div>
+                                <div class="div8">1234</div>
                               </div>
                             </div>
                           </div>
@@ -255,13 +263,13 @@
                           <div class="monthyear">
                             <div class="input2">
                               <div class="content2">
-                                <div class="div7">01</div>
+                                <div class="div15">01</div>
                               </div>
                             </div>
                             <div class="cvv-input">/</div>
                             <div class="input3">
                               <div class="content3">
-                                <div class="div8">25</div>
+                                <div class="div16">25</div>
                               </div>
                             </div>
                           </div>
@@ -278,7 +286,7 @@
                           <div class="information3">Security code</div>
                         </div>
                         <div class="input5">
-                          <div class="div9">***</div>
+                          <div class="div17">***</div>
                         </div>
                       </div>
                       <div class="check1">
