--- a/payment-page.html
+++ b/payment-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./payment-page.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
     />
     <link
       rel="stylesheet"
@@ -24,25 +24,33 @@
     />
     <link
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open Sans:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap"
     />
   </head>
   <body>
     <div class="payment-page">
-      <header class="frame-header">
+      <header class="frame-parent43">
         <div class="f-r-a-m-e-a-parent">
           <div class="f-r-a-m-e-a">
             <img
-              class="mask-group-1-15"
+              class="mask-group-1-110"
               loading="eager"
               alt=""
               src="./public/mask-group-1-1@2x.png"
             />
           </div>
-          <div class="frame-wrapper">
+          <div class="frame-wrapper3">
             <div class="logout-signup-parent">
               <div class="logout-signup">
-                <div class="rent3">Rent</div>
+                <div class="rent4">Rent</div>
                 <div class="buy2">Buy</div>
                 <div class="sell2">Sell</div>
               </div>
@@ -54,7 +62,7 @@
               />
             </div>
           </div>
-          <div class="frame-parent14">
+          <div class="frame-parent44">
             <button class="log-out-wrapper">
               <div class="log-out1">Log out</div>
             </button>
@@ -63,10 +71,10 @@
             </button>
           </div>
         </div>
-        <div class="frame-child1"></div>
+        <div class="frame-child37"></div>
       </header>
-      <main class="frame-main">
-        <div class="frame-wrapper1">
+      <main class="frame-parent45">
+        <div class="frame-wrapper4">
           <div class="arrow-left-parent">
             <div class="arrow-left">
               <img
@@ -87,7 +95,7 @@
               />
 
               <div class="bathrooms-frame">
-                <div class="rent-frame">
+                <div class="rent-frame1">
                   <div class="buy-frame">
                     <div class="bedrooms1">Bedrooms</div>
                     <div class="beddouble-frame">
@@ -114,7 +122,7 @@
                           src="./public/bathtub01.svg"
                         />
 
-                        <b class="b10">2</b>
+                        <b class="b16">2</b>
                       </div>
                     </div>
                   </div>
@@ -129,7 +137,7 @@
                           src="./public/bathtub01.svg"
                         />
 
-                        <b class="b10">2</b>
+                        <b class="b16">2</b>
                       </div>
                     </div>
                   </div>
@@ -144,7 +152,7 @@
                           src="./public/wallet03.svg"
                         />
 
-                        <b class="b12">₦400000</b>
+                        <b class="b18">₦400000</b>
                       </div>
                     </div>
                   </div>
@@ -244,7 +252,7 @@
       var calendarframe = document.getElementById("calendarframe");
       if (calendarframe) {
         calendarframe.addEventListener("click", function (e) {
-          window.location.href = "./payment-page.html";
+          window.location.href = "./payment-page-2.html";
         });
       }
     </script>
