--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./register.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
     />
     <link
       rel="stylesheet"
@@ -24,12 +24,20 @@
     />
     <link
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open Sans:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap"
     />
   </head>
   <body>
     <div class="register">
-      <img class="image-200-icon" alt="" src="./public/image-200@2x.png" />
+      <img class="image-200-icon2" alt="" src="./public/image-200@2x.png" />
 
       <form class="register-form">
         <div class="register-form-child"></div>
@@ -39,10 +47,10 @@
             <span class="welcome">o </span>
           </div>
           <img
-            class="mask-group-1-12"
+            class="mask-group-1-17"
             loading="eager"
             alt=""
-            src="./public/mask-group-1-11@2x.png"
+            src="./public/mask-group-1-111@2x.png"
           />
         </div>
         <div class="input-label">
@@ -94,9 +102,9 @@
             </div>
           </div>
         </div>
-        <button class="button" id="button">
-          <div class="button1">
-            <div class="log-in">Create Account</div>
+        <button class="button5" id="button">
+          <div class="button6">
+            <div class="log-in5">Create Account</div>
           </div>
         </button>
       </form>
@@ -106,7 +114,7 @@
       var button = document.getElementById("button");
       if (button) {
         button.addEventListener("click", function (e) {
-          // Please sync "onboarding 1" to the project
+          window.location.href = "./onboarding.html";
         });
       }
     </script>
