Changes made by chynwe. I worked on the tenant flow here

--- a/payment-page-2.html
+++ b/payment-page-2.html
@@ -80,7 +80,7 @@
               src="./public/arrowleft01.svg"
             />
 
-            <div class="back-to-details">Back to details</div>
+            <div class="back-to-details"><a href="./payment-page.html">Back to details</a></div>
           </div>
           <div class="c-v-vinput">
             <div class="checkbutton">
@@ -312,7 +312,7 @@
               </div>
               <div class="pay-instalments-frame">
                 <div class="pay-frame-parent">
-                  <div class="pay-2000">Pay $2,000</div>
+                  <div class="pay-2000"><a href="./property-tenant.html" style="color: white;">Pay $2,000</a></div>
                 </div>
                 <div class="pay-frame-parent1">
                   <div class="pay-instalments">Pay Instalments</div>
