--- a/payment-page.html
+++ b/payment-page.html
@@ -84,7 +84,7 @@
                 src="./public/arrowleft01.svg"
               />
 
-              <div class="back-to-details2">Back to details</div>
+              <div class="back-to-details2"><a href="./property-tenant.html">Back to properties</a></div>
             </div>
             <div class="bedroom-frame-parent">
               <img
