--- a/property-tenant.html
+++ b/property-tenant.html
@@ -109,6 +109,8 @@
           <div class="logout2">Logout</div>
         </div>
       </div>
+      <!-- cards -->
+      <a href="./payment-page.html">
       <div class="property-frame5">
         <div class="card6" id="cardContainer">
           <div class="card-child5"></div>
@@ -508,6 +510,7 @@
           src="./public/ellipse-6792@2x.png"
         />
       </div>
+    </a>
     </div>
 
     <script>
