--- a/register.html
+++ b/register.html
@@ -114,7 +114,7 @@
       var button = document.getElementById("button");
       if (button) {
         button.addEventListener("click", function (e) {
-          window.location.href = "./onboarding.html";
+          window.location.href = "./onboarding-1.html";
         });
       }
     </script>
