recent commit chynwe

--- a/property-tenant.html
+++ b/property-tenant.html
@@ -152,7 +152,7 @@
               <span class="badagry-lagos6">Badagry, Lagos.</span>
               <span>
                 Situated along the pristine shores of the Atlantic
-                Ocean...</span
+                Ocean.......</span
               >
             </div>
             <div class="login-button-frame">
