--- a/index.html
+++ b/index.html
@@ -660,21 +660,13 @@
           <div class="question-list">
             <div class="faq-item-1">
               <div class="lorem-ipsum-dolor-sit-amet-con">
-                <div class="a-question-goes">A question goes here</div>
+                <div class="a-question-goes">Who Created this site</div>
                 <img class="vector-icon" alt="" src="./public/vector-9.svg" />
               </div>
               <div class="lorem-ipsum-dolor">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur.
+                This web app was developed by the resilient team of product designers, front-end and back-end
+                team in fulfillment of the Devcareer graduation of the software engineering program 
+
               </div>
             </div>
             <div class="faq-list-2">
