connecting sign up to dashboard

--- a/register.html
+++ b/register.html
@@ -104,7 +104,7 @@
         </div>
         <button class="button5" id="button">
           <div class="button6">
-            <div class="log-in5">Create Account</div>
+            <div class="log-in5"><a href="./property-tenant.html">Create Account</a></div>
           </div>
         </button>
       </form>
