relevant changes made now about ipsum lorem text

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -163,9 +163,9 @@
                     We make it easy for tenants and landlords
                   </h1>
                   <div class="amet-minim-mollit">
-                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                    do amet sint. Velit officia consequat duis enim velit
-                    mollit. Exercitation veniam consequat sunt nostrud amet.
+                    We made this to help both the lanlords and tenants
+                    experience a semless relationship thereby creating a win win
+                    situation for both.
                   </div>
                 </div>
               </div>
@@ -664,13 +664,11 @@
                 <img class="vector-icon" alt="" src="./public/vector-9.svg" />
               </div>
               <div class="lorem-ipsum-dolor">
-                This web app was developed by the resilient team of product designers, front-end and back-end
-                team in fulfillment of the Devcareer graduation of the software engineering program 
-
+                Team of product designers, front-end and back-end
               </div>
             </div>
             <div class="faq-list-2">
-              <div class="a-question-goes1">A question goes here</div>
+              <div class="a-question-goes1">Payment Methods</div>
               <img
                 class="f-a-q-item-content"
                 alt=""
@@ -678,7 +676,7 @@
               />
             </div>
             <div class="faq-list-2">
-              <div class="a-question-goes1">A question goes here</div>
+              <div class="a-question-goes1">Required Documents</div>
               <img
                 class="f-a-q-item-content"
                 alt=""
@@ -686,7 +684,9 @@
               />
             </div>
             <div class="faq-list-2">
-              <div class="a-question-goes1">A question goes here</div>
+              <div class="a-question-goes1">
+                What to do when an agreement broken
+              </div>
               <img
                 class="f-a-q-item-content"
                 alt=""
@@ -694,7 +694,7 @@
               />
             </div>
             <div class="faq-list-2">
-              <div class="a-question-goes1">A question goes here</div>
+              <div class="a-question-goes1">Our Offices</div>
               <img
                 class="f-a-q-item-content"
                 alt=""
@@ -702,7 +702,9 @@
               />
             </div>
             <div class="faq-list-2">
-              <div class="a-question-goes1">A question goes here</div>
+              <div class="a-question-goes1">
+                How to create partnership with us
+              </div>
               <img
                 class="f-a-q-item-content"
                 alt=""
@@ -782,7 +784,7 @@
 
     <script>
       var monthlyYearlySwitcher = document.getElementById(
-        "monthlyYearlySwitcher",
+        "monthlyYearlySwitcher"
       );
       if (monthlyYearlySwitcher) {
         monthlyYearlySwitcher.addEventListener("click", function (e) {
@@ -791,7 +793,7 @@
       }
 
       var monthlyYearlySwitcher1 = document.getElementById(
-        "monthlyYearlySwitcher1",
+        "monthlyYearlySwitcher1"
       );
       if (monthlyYearlySwitcher1) {
         monthlyYearlySwitcher1.addEventListener("click", function (e) {
